2004-08-06  Matthias Clasen  <mclasen@redhat.com>

	* m4macros/glib-gettext.m4: Require ngettext.  (#123847,
	Danilo Segan)

Thu Aug  5 20:53:00 2004  Ray Strode  <rstrode@redhat.com>

	* glib/gutils.h (g_get_codeset): strdup result so caller
	doesn't free internally managed memory.

2004-08-04  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add glib_check_version.

	* config.h.win32.in: Update to match what configure produces. Add
	the G_ATOMIC_*. Define G_ATOMIC_I486 when compiling with gcc. Move
	HAVE_INT64_AND_I64 to where the configure script puts it. Add
	HAVE_INTTYPES_H_WITH_UINTMAX. Define intmax_t as __int64 for MSVC.

Tue Aug  3 16:19:44 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/goption.c: Mark user visible strings for translation.

Tue Aug  3 15:50:55 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/goption.[hc]: Pedantically use g types throughout.

Tue Aug  3 14:58:20 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gutils.h: 
	* glib/gutils.c (glib_check_version): New function to
	check the version of GLib at runtime.  (#149175, Michael Natterer)

2004-08-03  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.h:
	* glib/gtypes.h:
	Move GTranslateFunc to gtypes.h
	
2004-08-02  Anders Carlsson  <andersca@gnome.org>

	* glib/Makefile.am:
	* glib/glib.h:
	* glib/goption.c:
	* glib/goption.h:
	* tests/.cvsignore:
	* tests/Makefile.am:
	* tests/option-test.c: 
	Add GOption.

2004-08-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmacros.h: Add a G_GNUC_INTERNAL macro to mark function
	declarations as internal and avoid PLT indirections for 
	them.  (#145465, Arjan van de Ven)

	* glib/gunicodeprivate.h: 
	* glib/gthreadinit.h: 
	* glib/gmessages.h: 
	* glib/gdebug.h: 
	* glib/gconvert.c: Use G_GNUC_INTERNAL for _g_charset_get_aliases(),
	_g_debug_init(), _g_log_fallback_handler(), _g_mem_thread_init(),
	_g_messages_thread_init(), _g_convert_thread_init(), 
	_g_rand_thread_init(), _g_main_thread_init(), _g_atomic_thread_init(),